fix height and width spacing

--- a/css/main.css
+++ b/css/main.css
@@ -48,8 +48,8 @@ h1 {
 
 #git_3 {
   background-color: yellow;
-  width: 30%;
-  height: 10em;
+  width: 50%;
+  height: 20em;
   text-align: center;
   display: flex;
   align-items: center;
